--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ title=AUTOBUSES!
 choose.option=Escoja una opción
 show.sacarbilletes: Sacar billetes
 show.infoviaje: Introduce informacion sobre el viaje
+select.estacionsalida=Selecciona la estacion de salida
