--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,3 +3,4 @@ title=AUTOBUSES!
 choose.option=Choose an option:
 show.sacarbilletes=Buy tickets
 show.infoviaje=Introduce information about your trip:
+select.estacionsalida=Select departure station
