introduce datatest view

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,5 +2,7 @@ welcome=Bienvenido a la más pequeña empresa de viajes en bus virtual del mundo!!
 title=AUTOBUSES!
 choose.option=Escoja una opción
 show.sacarbilletes: Sacar billetes
-show.infoviaje: Introduce informacion sobre el viaje
-select.estacionsalida=Selecciona la estacion de salida
+show.infoviaje: Introduce información sobre el viaje
+show.insertardatostest: Introducir datos de test
+select.estacionsalida=Selecciona la estación de salida
+select.estacionllegada=Selecciona la estación de llegada
