--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,4 +3,6 @@ title=AUTOBUSES!
 choose.option=Choose an option:
 show.sacarbilletes=Buy tickets
 show.infoviaje=Introduce information about your trip:
+show.insertardatostest: Introduce test data
 select.estacionsalida=Select departure station
+select.estacionllegada=Select arrival station
