--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,7 @@ show.infoviaje: Introduce información sobre el viaje
 show.insertardatostest: Introducir datos de test
 select.estacionsalida=Selecciona la estación de salida
 select.estacionllegada=Selecciona la estación de llegada
+select.fechadesalida=Selecciona la fecha de salida
+select.tipodeviaje=Selecciona el tipo de viaje
+selec.horadesalida=Selecciona la hora de salida
+select.numerodeviajeros=Selecciona el numero de pasajeros
