--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,3 +6,7 @@ show.infoviaje=Introduce information about your trip:
 show.insertardatostest: Introduce test data
 select.estacionsalida=Select departure station
 select.estacionllegada=Select arrival station
+select.fechadesalida=Select departure date
+select.tipodeviaje=Select the type of trip
+select.horadesalida=Select departure time
+select.numerodeviajeros=Select number of passengers
