--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,12 +1,16 @@
 welcome=Bienvenido a la más pequeña empresa de viajes en bus virtual del mundo!!
 title=AUTOBUSES!
 choose.option=Escoja una opción
-show.sacarbilletes: Sacar billetes
+show.sacarbilletes=Sacar billetes
 show.infoviaje: Introduce información sobre el viaje
-show.insertardatostest: Introducir datos de test
+show.insertardatostest=Introducir datos de test
+show.volveralmenu=Volver al menu principal
+show.disponibles=Trayectos disponibles
+show.estaciondesalida=Departure station
+show.estaciondellegada=Arrival station
 select.estacionsalida=Selecciona la estación de salida
 select.estacionllegada=Selecciona la estación de llegada
 select.fechadesalida=Selecciona la fecha de salida
 select.tipodeviaje=Selecciona el tipo de viaje
-selec.horadesalida=Selecciona la hora de salida
+select.horadesalida=Selecciona la hora de salida
 select.numerodeviajeros=Selecciona el numero de pasajeros
