--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,7 +3,11 @@ title=AUTOBUSES!
 choose.option=Choose an option:
 show.sacarbilletes=Buy tickets
 show.infoviaje=Introduce information about your trip:
-show.insertardatostest: Introduce test data
+show.insertardatostest=Introduce test data
+show.volveralmenu=Back to main menu
+show.disponibles=Travels available
+show.estaciondesalida=Estacion de salida
+show.estaciondellegada=Estacion de llegada
 select.estacionsalida=Select departure station
 select.estacionllegada=Select arrival station
 select.fechadesalida=Select departure date
