--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,11 +6,14 @@ show.infoviaje: Introduce información sobre el viaje
 show.insertardatostest=Introducir datos de test
 show.volveralmenu=Volver al menu principal
 show.disponibles=Trayectos disponibles
-show.estaciondesalida=Departure station
-show.estaciondellegada=Arrival station
+show.estaciondesalida=Estación de salida
+show.estaciondellegada=Estación de llegada
+show.fechadesalida=Fecha de salida
+show.fechadellegada=Fecha de llegada
+show.horadesalida=Hora de salida
+show.horadellegada=Hora de llegada
 select.estacionsalida=Selecciona la estación de salida
 select.estacionllegada=Selecciona la estación de llegada
 select.fechadesalida=Selecciona la fecha de salida
 select.tipodeviaje=Selecciona el tipo de viaje
-select.horadesalida=Selecciona la hora de salida
 select.numerodeviajeros=Selecciona el numero de pasajeros
