--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,11 +6,13 @@ show.infoviaje=Introduce information about your trip:
 show.insertardatostest=Introduce test data
 show.volveralmenu=Back to main menu
 show.disponibles=Travels available
-show.estaciondesalida=Estacion de salida
-show.estaciondellegada=Estacion de llegada
+show.estaciondesalida=Departure station
+show.estaciondellegada=Arrival station
+show.fechadesalida=Departure date
+show.fechadellegada=Arrival date
+show.horadesalida=Departure time
+show.horadellegada=Arrival time
 select.estacionsalida=Select departure station
 select.estacionllegada=Select arrival station
-select.fechadesalida=Select departure date
 select.tipodeviaje=Select the type of trip
-select.horadesalida=Select departure time
 select.numerodeviajeros=Select number of passengers
