delete shopping cart

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,16 +2,21 @@ welcome=Bienvenido a la más pequeña empresa de viajes en bus virtual del mundo!!
 title=AUTOBUSES!
 choose.option=Escoja una opción
 show.sacarbilletes=Sacar billetes
+show.cancelarreserva=Cancelar reserva
 show.infoviaje: Introduce información sobre el viaje
 show.insertardatostest=Introducir datos de test
 show.volveralmenu=Volver al menu principal
-show.disponibles=Trayectos disponibles
+show.idas=Idas
+show.vueltas=Vueltas
 show.estaciondesalida=Estación de salida
 show.estaciondellegada=Estación de llegada
 show.fechadesalida=Fecha de salida
 show.fechadellegada=Fecha de llegada
 show.horadesalida=Hora de salida
 show.horadellegada=Hora de llegada
+show.atras=Volver
+show.comprar=Comprar
+show.imprimir=Imprimir
 select.estacionsalida=Selecciona la estación de salida
 select.estacionllegada=Selecciona la estación de llegada
 select.fechadesalida=Selecciona la fecha de salida
