--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,16 +2,21 @@ welcome=Welcome to the smallest buses trip store in the world!!
 title=AUTOBUSES!
 choose.option=Choose an option:
 show.sacarbilletes=Buy tickets
+show.cancelarreserva=Cancel reservation 
 show.infoviaje=Introduce information about your trip:
 show.insertardatostest=Introduce test data
 show.volveralmenu=Back to main menu
-show.disponibles=Travels available
+show.idas=Departures
+show.vueltas=Returns
 show.estaciondesalida=Departure station
 show.estaciondellegada=Arrival station
 show.fechadesalida=Departure date
 show.fechadellegada=Arrival date
 show.horadesalida=Departure time
 show.horadellegada=Arrival time
+show.atras=Go Back
+show.comprar=Buy
+show.imprimir=Print
 select.estacionsalida=Select departure station
 select.estacionllegada=Select arrival station
 select.tipodeviaje=Select the type of trip
